# grandmaster-3d-chess-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.github/workflows/: pages.yml
src/: app.rs  audio.rs  bot.rs  constants.rs  game.rs  main.rs  storage.rs  style.css  types.rs
src/render/: mod.rs
src/ui/: mod.rs
