[package]
name = "grandmaster-3d-chess-rs"
version = "1.0.0"
edition = "2024"
authors = ["Aarambh Dev Hub"]
description = "Frontend-only Rust/WASM 3D chess game built with Leptos, Scenix, Animato, and the Rust chess crate."
license = "MIT"
repository = "https://github.com/AarambhDevHub/grandmaster-3d-chess-rs"
homepage = "https://aarambhdevhub.github.io/grandmaster-3d-chess-rs/"
readme = "README.md"
keywords = ["rust", "wasm", "leptos", "chess", "webgl"]
categories = ["games", "wasm", "web-programming"]

[dependencies]
animato = { version = "1.4.0", features = ["leptos-csr", "wasm"] }
chess = "3.2.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.8.19", features = ["csr"] }
scenix = { version = "1.1.0", features = ["renderer", "animato", "wasm", "raycaster", "post"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "29.0.3", features = ["webgl"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioParam",
  "CanvasRenderingContext2d",
  "Document",
  "GainNode",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "OscillatorNode",
  "Performance",
  "PointerEvent",
  "SpeechSynthesis",
  "SpeechSynthesisUtterance",
  "Storage",
  "UrlSearchParams",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "WheelEvent",
  "Window",
]
